applications/openeuler-website-v1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website-v1
  name: website-v1
