applications/openeuler-website-v1/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/limit-connections: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "2000"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "ALLOW-FROM https://vhall.huawei.com";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com www.google-analytics.com www.googletagmanager.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors https://vhall.huawei.com";
      set $Real $proxy_add_x_forwarded_for;
      if ( $Real ~ (\d+)\.(\d+)\.(\d+)\.(\d+),(.*) ){
          set $Real $1.$2.$3.$4;
      }
      proxy_set_header True-Client-IP $Real;
      set $allow_uri false;
      if ( $request_uri ~ ^/zh/interaction/summit-list/ ){
          set $allow_uri true;
      }
      if ( $request_uri ~ ^/zh/community/certification-services/ ){
          set $allow_uri true;
      }
      if ( $request_uri ~ ^/en/community/certification-services/ ){
          set $allow_uri true;
      }
      if ( $request_uri ~ ^/(assets|img|api-certification)/ ){
          set $allow_uri true;
      }
      if ( $request_uri ~ ^/favicon.ico$ ){
          set $allow_uri true;
      }
      if ( $allow_uri = "false" ){
          rewrite ^/(.*) https://www.openeuler.org permanent;
      }
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/other/cla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVuZXVsZXI= redirect;
      rewrite ^/en/other/cla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVuZXVsZXI= redirect;
      rewrite ^/zh/docs(/|$)(.*) https://docs.openeuler.org/zh/docs/$2 redirect;
      rewrite ^/en/docs(/|$)(.*) https://docs.openeuler.org/en/docs/$2 redirect;
      rewrite ^/ru(/|$)(.*) https://ru.openeuler.org/ru/$2 redirect;
  name: website-v1-ingress
  namespace: website-v1
spec:
  tls:
    - hosts:
        - v1.openeuler.org
      secretName: website-v1-tls
  rules:
    - host: v1.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-v1-service
              servicePort: 80
            path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500"
  name: website-v1-ingress-backend
  namespace: website-v1
spec:
  tls:
    - hosts:
        - v1.openeuler.org
      secretName: website-v1-backend-tls
  rules:
    - host: v1.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
          - backend:
              serviceName: openeuler-meetingserver-internal
              servicePort: 80
            path: /api-sig(/|$)(.*)
          - backend:
              serviceName: openeuler-api-cve
              servicePort: 8080
            path: /api-cve(/|$)(.*)
